--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,3 +24,5 @@ jobs:
 
       - name: Build imagen Dockerfile
         uses: cloudposse/github-action-docker-compose-test-run@main
+        with:
+          file: Dockerfile
