--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,4 +25,4 @@ jobs:
       - name: Build imagen Dockerfile
         uses: cloudposse/github-action-docker-compose-test-run@main
         with:
-          file: Dockerfile
+          file: app/Dockerfile
